--- a/src/main/resources/templates/articles/new.mustache
+++ b/src/main/resources/templates/articles/new.mustache
@@ -1,9 +1,16 @@
 {{>layouts/header}}
 
-<form action="">
-    <input type="text">
-    <textarea></textarea>
-    <button type="submit">Submit</button>
+<!--name="title", name="content"로 DTO의 해당 필드와 연결-->
+<form class="container" action="/articles/create" method="post">
+    <div class="mb-3">
+        <label class="form-label">제목</label>
+        <input type="text" class="form-control" name="title">
+    </div>
+    <div class="mb-3">
+        <label class="form-label">내용</label>
+        <textarea class="form-control" rows="3" name="content"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
 {{>layouts/footer}}
