데이터 목록 조회

--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -9,13 +9,13 @@
     </tr>
     </thead>
     <tbody>
-    {{#article}}
+    {{#articleList}}
         <tr>
             <td>{{id}}</td>
             <td>{{title}}</td>
             <td>{{content}}</td>
         </tr>
-    {{/article}}
+    {{/articleList}}
     </tbody>
 </table>
 
