--- a/src/main/resources/templates/articles/index.mustache
+++ b/src/main/resources/templates/articles/index.mustache
@@ -12,11 +12,11 @@
     {{#articleList}}
         <tr>
             <td>{{id}}</td>
-            <td>{{title}}</td>
+            <td><a href="/articles/{{id}}">{{title}}</a></td>
             <td>{{content}}</td>
         </tr>
     {{/articleList}}
     </tbody>
 </table>
-
+<a href="/articles/new">New Article</a>
 {{>layouts/footer}}
