--- a/src/main/resources/templates/comments/_new.mustache
+++ b/src/main/resources/templates/comments/_new.mustache
@@ -9,7 +9,6 @@
             </div>
             <!--댓글 본문 입력-->
             <div class="mb-3">
-                <input type="text" class="form-control" id="new-comment-nickname">
                 <label class="form-label">댓글 내용</label>
                 <textarea type="text" class="form-control" rows="3" id="new-comment-body"></textarea>
             </div>
@@ -28,8 +27,7 @@
     // 댓글 생성 버튼 변수화
     const commentCreateBtn = document.querySelector("#comment-create-btn");
     // 댓글 클릭 이벤트 감지
-    commentCreateBtn.addEventListener("click",function(){
-        console.log("버튼을 클릭했습니다.");
+    commentCreateBtn.addEventListener("click", function() {
         // 새 댓글 객체 생성
         const comment = {
             // 새 댓글의 닉네임
@@ -41,7 +39,21 @@
         };
         // 댓글 객체 출력
         console.log(comment);
+        // fetch() - 비동기 통신을 위한 API
+        const url = "/api/articles/" + comment.articleId + "/comments";
+        fetch(url, {
+            method: "POST", // POST 요청
+            headers: { // 전송 본문의 데이터 타입(JSON) 정보
+            "Content-Type": "application/json"
+        },
+            body: JSON.stringify(comment) //comment 객체를 JSON 문자열로 변환해 전송
+        }).then(response => {
+            // HTTP 응답 코드에 따른 메시지 출력
+            const msg = (response.ok) ? "댓글이 등록됐습니다." : "댓글 등록 실패..!";
+            alert(msg);
+            // 현재 페이지 새로 고침
+            window.location.reload();
+        });
     });
-    }
-
+}
 </script>
